--- a/dkub-minutes.dtx
+++ b/dkub-minutes.dtx
@@ -245,6 +245,16 @@ and the derived files           dkub-minutes.ins,
 % |\logo{mylogo}\logoscale{.5}| will translate to
 % |\includegraphics[scale=\min@logoscale]{\logo}|
 %
+% \DescribeMacro{\logopadding}
+% \marg{length}
+%
+% This sets the padding for the last row in the table for the items next to 
+% your logo.  Several attempts were made to compute this lenght, but 
+% it ended up always being too large.  The length should be text, not an
+% actual length set with |\newlength{}| and |\setlength{}{}|.  For example,
+% |\logopadding{5.2em}|
+% 
+%
 % \subsection{Macros for Keeping Attendance}
 %
 % \DescribeMacro{\attendee}
@@ -448,6 +458,12 @@ and the derived files           dkub-minutes.ins,
 \def\logoscale#1{\def\min@logoscale{#1}}
 %    \end{macrocode}
 %\end{macro}
+%\begin{macro}{\logopadding}
+%    \begin{macrocode}
+\def\min@logopadding{0em}
+\def\logopadding#1{\def\min@logopadding{#1}}
+%    \end{macrocode}
+%\end{macro}
 %
 % \subsection{Attendee Macros}
 %
@@ -568,37 +584,12 @@ and the derived files           dkub-minutes.ins,
     \newlength{\attendancelistlength}{\textwidth-\attendancelabellength}
 %    \end{macrocode}
 %
-% Now we need to compute some heights to figure out the height of the
-% padding row in the upper portion of the table.
-%
-%    \begin{macrocode}
-    \newlength{\textRowHeight}
-    \setlength{\textRowHeight}{\heightof{Meeting Called By:}*3}
-    \setlength{\textRowHeight}{%
-      \textRowHeight+\heightof{\bfseries\sffamily{ \min@shortdate{} \min@title }}}
-    \newlength{\imageHeight}
-    \setlength{\imageHeight}{%
-      \heightof{\includegraphics{\min@logo}}}
-    \setlength{\imageHeight}{\imageHeight*\real{\min@logoscale}}
-
-    \newsavebox{\logoimagesb}
-    \savebox{\logoimagesb}{\includegraphics[scale=\min@logoscale]{\min@logo}}
-    \setlength{\imageHeight}{\ht\logoimagesb}
-%    \end{macrocode}
-% If the total height of the three text rows is greater than the image height
-% you will get 0.  Otherwise, you \emph{should} end up with the remaining space
-% for your padding row.
-%
-%    \begin{macrocode}
-    \newlength{\paddingRowHeight}
-    \setlength{\paddingRowHeight}{%
-      \maxof{\textRowHeight}{\imageHeight}-{\textRowHeight}-10pt%
-    }
-%    \end{macrocode}
-%
 % Now we do our full table.  |\resizebox| makes the table the page width.
 % Using tabularx and the array package, we get 4 columns using our computed
 % lengths and some rules from booktabs to make it nice.
+%
+% The padding for the 4th row on the right side of the logo must be set via
+% |\logopadding|.  It defaults to 0em.
 % 
 % This also uses the attendance/absent/guest counters to make a nice layout
 % of who is in the meeting.
@@ -613,7 +604,7 @@ and the derived files           dkub-minutes.ins,
           X}
                 \toprule
                 \multirow{4}{*}{%
-                  \fbox{\includegraphics[scale=\min@logoscale]{\min@logo}}%
+                  \includegraphics[scale=\min@logoscale]{\min@logo}%
                 } & 
                 \multicolumn{3}{l}{%
                   \bfseries\sffamily{ \min@shortdate{} \min@title }%
@@ -622,7 +613,7 @@ and the derived files           dkub-minutes.ins,
                 & \textbf{Date:} & \multicolumn{2}{l}{\min@date} \\
                 & \textbf{Time:} & \multicolumn{2}{l}{\min@starttime} \\
                 & \textbf{Location:} & \multicolumn{2}{l}{\min@location} \\
-                [\paddingRowHeight]
+                [\min@logopadding]
                 \midrule                
                 \textbf{Meeting Called By:} & \min@moderation & 
                   \textbf{Type of Meeting:} & General Meeting  \\
